test_translator/tests/data/checkpoint_2/core/pass/90_exception_any/solution.ts
export function might_raise(): never {
    throw new Error("an error occurred");
}
