test_translator/tests/data/checkpoint_2/core/fail/90_exception_any/solution.ts
export function might_raise(): null {
    return null;
}
